Implement global exception handling mechanism using `RestControllerAdvice`; Vital refactoring.