@@ -1,5 +1,6 @@
 package de.mfberg.bbak.services.parties;
 
+import de.mfberg.bbak.exceptions.JobSchedulingException;
 import de.mfberg.bbak.jobs.TravelJobInfo;
 import de.mfberg.bbak.services.QuartzService;
 import lombok.AllArgsConstructor;
@@ -14,21 +15,20 @@ public class TravelService {
     private static final Logger LOG = LoggerFactory.getLogger(TravelService.class);
     private final QuartzService quartzService;
 
-    public void schedule(final Class jobClass, final TravelJobInfo travelJobInfo)
-    {
+    public void schedule(final Class jobClass, final TravelJobInfo travelJobInfo) {
         try {
             quartzService.getScheduler().scheduleJob(
                     quartzService.buildJobDetail(jobClass, travelJobInfo),
                     quartzService.buildTrigger(jobClass, travelJobInfo));
         } catch (SchedulerException e) {
             LOG.error(e.getMessage(), e);
+            throw new JobSchedulingException(jobClass.getSimpleName());
         }
     }
 
     public String makeLabel(TravelJobInfo info) {
         return info.getPartyId() + "=>" +
-                ((Long) info.getPath().get(0).getQ()).toString() +
-                ":" +
-                ((Long) info.getPath().get(0).getR()).toString();
+                ((Long) info.getPath().getFirst().getQ()) + ":" +
+                ((Long) info.getPath().getFirst().getR());
     }
 }
